# dogai

./: .clangd  .gitignore  CMakeLists.txt  README.md  blood.cfg  build_modular.bat
include/: config_manager.hpp  fov_processor.hpp  logger.hpp  windows_graphics_capture.hpp  yolov8_detector.hpp  yolov8_model.hpp  yolov8_postprocessor.hpp  yolov8_preprocessor.hpp  yolov8_visualizer.hpp
src/: fov_processor.cpp  main.cpp  windows_graphics_capture.cpp  yolov8_detector.cpp  yolov8_model.cpp  yolov8_postprocessor.cpp  yolov8_preprocessor.cpp  yolov8_visualizer.cpp
